# vega_project

./: ARCHITECTURE.md  Dockerfile  README.md  REQUIREMENTS.md  docker-compose.yml
.github/workflows/: file-check.yml
client/: Dockerfile  package-lock.json  package.json
client/public/: index.html
client/src/: api.ts  const.ts  index.tsx  store.ts
client/src/app/: App.scss  App.tsx
client/src/components/button/: button.scss  button.tsx
client/src/components/chart/: chart.scss  chart.tsx
client/src/components/dropdown/: dropdown.scss  dropdown.tsx
client/src/components/form/: form.scss  form.tsx
client/src/components/form-field/: form-field.scss  form-field.tsx
client/src/components/icons/chevron/: chevron.scss  chevron.tsx
client/src/components/icons/plus/: plus.scss  plus.tsx
client/src/components/layout/: layout.scss  layout.tsx
client/src/components/main/: main.scss  main.tsx
client/src/components/modal/: modal.scss  modal.tsx
client/src/components/share-form-field/: share-form-field.scss  share-form-field.tsx
client/src/form-field/: form-field.tsx
client/src/hooks/: use-visible.ts
client/src/utils/: cls.ts
project/: CMakeLists.txt  Dockerfile  main.cpp
project/routes/: companies.cpp  companies.h  ping.cpp  ping.h  routes.h  shares.cpp
project/src/: http_client.h
project/tests/: tests_requests.cpp
server/: CMakeLists.txt  Dockerfile  main.cpp
server/routes/: companies.cpp  companies.h  ping.cpp  ping.h  routes.h  shares.cpp  shares.hpp
server/src/: cors.h
server/utils/: utils.hpp
(+2 files in other folders)
